--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
                 <div class="row justify-content-center">
                     <!-- Portfolio Items-->
                     <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                               <a class="btn boton" href="https://leo-it.github.io/PelisPlus/" target="_blank" rel="noopener noreferrer"> 
+                                   <div class="portfolio-item-caption-content text-center text-white">
+                                <h3>carousel <i class="fas fa-angle-double-right"></i></h3>   
+                                <p></p>
+                               </div></a>
+                            </div><img class="img-fluid" src="assets/img/portfolio/carousel1.png" alt="carousel"/>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                <a class="btn boton" href="https://leo-it.github.io/webEntrenamiento/" target="_blank" rel="noopener noreferrer"><div class="portfolio-item-caption-content text-center text-white">
@@ -110,16 +122,7 @@
                             </div><img class="img-fluid" src="assets/img/portfolio/modoscuro2.png" alt="modoscuro"/>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                               <a class="btn boton" href="https://leo-it.github.io/carrousel1/" target="_blank" rel="noopener noreferrer"> <div class="portfolio-item-caption-content text-center text-white">
-                                <h3>carousel <i class="fas fa-angle-double-right"></i></h3>   
-                                <p></p>
-                               </div></a>
-                            </div><img class="img-fluid" src="assets/img/portfolio/carousel1.png" alt="carousel"/>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </section>
